fix: align background image to bottom

--- a/_sass/inc/_base.scss
+++ b/_sass/inc/_base.scss
@@ -113,6 +113,7 @@ header{
         background-image: url('/img/sphere.jpg');
         background-size: cover;
         background-repeat: no-repeat;
+        background-position: bottom;
         -webkit-filter: blur(5px);
         -moz-filter: blur(5px);
         -o-filter: blur(5px);
